[project]
name = "programko"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.4",
    "pip>=26.1",
]

[tool.uv.workspace]
members = [
    "cviceni 3",
    "cviceni 5",
    "cviceni 7",
    "cviceni 10",
    "cviceni 11",
    "cvika 11 ukol/cviceni-11-ukol",
    "cviceni 12",
]
